Implement add region in region repository

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Username=postgres;Password=5df46sd4fFSD4fd"
+  },
   "AllowedHosts": "*"
 }
